--- a/sass/shop/layout/listening__sidebar.scss
+++ b/sass/shop/layout/listening__sidebar.scss
@@ -3,8 +3,9 @@
     height: 32rem;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: repeat(6, 16.6%);
+    grid-template-rows: repeat(6, 14%) 16%;
     padding-left: 0.8rem;
+    border: 1px solid green;
 
     &--active-box {
         border-radius: 1rem;
@@ -30,12 +31,16 @@
                 align-content: center;
                 justify-items: center;
                 justify-content: center;
-                width: 3.4rem;
-                height: 3.4rem;
+                width: 3rem;
+                height: 3rem;
                 border-radius: 50%;
                 background-color: #1877f2;
 
                 &--icon {
+                    width: 2rem;
+                    height: 2rem;
+                    transform: scale(0.8);
+
                     -webkit-filter: invert(100%);
                 }
             }
@@ -56,6 +61,7 @@
     }
 
     &--normal-box {
+        margin-top: -0.3rem;
         border-radius: 1rem;
         width: 97%;
         height: 90%;
@@ -84,13 +90,15 @@
                 align-content: center;
                 justify-items: center;
                 justify-content: center;
-                width: 3.4rem;
-                height: 3.4rem;
+                width: 3rem;
+                height: 3rem;
                 border-radius: 50%;
                 // background-color: #1877f2;
                 background-color: rgba(255, 255, 255, 0.1);
 
                 &--icon {
+                    transform: scale(0.8);
+
                     -webkit-filter: invert(89%)  sepia(6%)  hue-rotate(185deg);
                 }
 
@@ -102,7 +110,7 @@
             align-content: center;
 
             &--txt {
-                margin-left: 0.5rem;
+                margin-left: -0.1rem;
                 font-size: 1.5rem;
                 color: #e4e6eb;
                 font-weight: bold;
