--- a/css/shop.css
+++ b/css/shop.css
@@ -164,8 +164,9 @@ body {
   height: 32rem;
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: repeat(6, 16.6%);
-  padding-left: 0.8rem; }
+  grid-template-rows: repeat(6, 14%) 16%;
+  padding-left: 0.8rem;
+  border: 1px solid green; }
   .main-con--grid--sidebar--main-part--listening-part--active-box {
     border-radius: 1rem;
     width: 97%;
@@ -188,11 +189,14 @@ body {
         align-content: center;
         justify-items: center;
         justify-content: center;
-        width: 3.4rem;
-        height: 3.4rem;
+        width: 3rem;
+        height: 3rem;
         border-radius: 50%;
         background-color: #1877f2; }
         .main-con--grid--sidebar--main-part--listening-part--active-box--icon-con--circle--icon {
+          width: 2rem;
+          height: 2rem;
+          transform: scale(0.8);
           -webkit-filter: invert(100%); }
     .main-con--grid--sidebar--main-part--listening-part--active-box--txt-con {
       display: grid;
@@ -204,6 +208,7 @@ body {
         color: #e4e6eb;
         font-weight: bold; }
   .main-con--grid--sidebar--main-part--listening-part--normal-box {
+    margin-top: -0.3rem;
     border-radius: 1rem;
     width: 97%;
     height: 90%;
@@ -229,18 +234,19 @@ body {
         align-content: center;
         justify-items: center;
         justify-content: center;
-        width: 3.4rem;
-        height: 3.4rem;
+        width: 3rem;
+        height: 3rem;
         border-radius: 50%;
         background-color: rgba(255, 255, 255, 0.1); }
         .main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con--circle--icon {
+          transform: scale(0.8);
           -webkit-filter: invert(89%) sepia(6%) hue-rotate(185deg); }
     .main-con--grid--sidebar--main-part--listening-part--normal-box--txt-con {
       display: grid;
       align-items: center;
       align-content: center; }
       .main-con--grid--sidebar--main-part--listening-part--normal-box--txt-con--txt {
-        margin-left: 0.5rem;
+        margin-left: -0.1rem;
         font-size: 1.5rem;
         color: #e4e6eb;
         font-weight: bold; }
