--- a/sass/shop/layout/sidebar__markket/listening__sidebar.scss
+++ b/sass/shop/layout/sidebar__markket/listening__sidebar.scss
@@ -119,7 +119,6 @@
 
         &:hover {
             cursor: pointer;
-            cursor: pointer;
             background-color: rgba(255, 255, 255, 0.1);
 
             transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -128,11 +127,20 @@
             -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
             -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
         }
-        &--drop{
-            grid-template-columns: 15% 80% 5%;
-            &--con{
-                -webkit-filter: invert(62%) sepia(98%) saturate(12%) hue-rotate(175deg) brightness(90%) contrast(96%);  
-            }  
+
+        &--drop {
+            grid-template-columns: 15% 78% 7%;
+
+            &--con {
+                display: grid;
+                align-items: center;
+                align-content: center;
+                justify-items: center;
+                justify-content: center;
+                text-align: center;
+
+                -webkit-filter: invert(62%) sepia(98%) saturate(12%) hue-rotate(175deg) brightness(90%) contrast(96%);
+            }
         }
     }
 
@@ -147,6 +155,21 @@
         justify-items: center;
         justify-content: center;
         text-align: center;
+        transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgba(45, 136, 255, 0.4);
+            transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+            -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        }
 
         &--txt {
             font-family: 'Roboto', sans-serif;
@@ -155,7 +178,7 @@
             font-weight: bold;
             color: #2d88ff;
         }
-      
+
     }
 
     &--divider {
