--- a/css/shop.css
+++ b/css/shop.css
@@ -207,6 +207,8 @@ body {
   width: 100%;
   height: 100%;
   border-top: 1px solid rgba(128, 128, 128, 0.4);
+  border-right: 1px solid rgba(128, 128, 128, 0.4);
+  outline: 1px solid rgba(128, 128, 128, 0.4);
   display: grid;
   grid-template-columns: 100%;
   grid-template-rows: 17% 83%;
@@ -361,11 +363,69 @@ body {
 
 .main-con--grid--sidebar--categories {
   width: 100%;
-  height: 100%;
-  border: 1px dotted red; }
+  height: auto;
+  margin-top: 0.8rem; }
   .main-con--grid--sidebar--categories--heading {
     font-size: 1.7rem;
-    font-weight: 600;
+    font-weight: 500;
     font-family: 'Roboto', sans-serif;
     color: #e4e6e8;
-    margin-left: 0.8rem; }
+    margin-left: 1.3rem; }
+  .main-con--grid--sidebar--categories--flex {
+    height: 100%;
+    margin-left: 0.5rem;
+    width: 94.5%;
+    display: flex;
+    flex-direction: column; }
+    .main-con--grid--sidebar--categories--flex--con {
+      margin-top: 0.4rem;
+      width: 100%;
+      height: 4.125rem;
+      border-radius: 1rem;
+      display: grid;
+      grid-template-rows: 100%;
+      grid-template-columns: 15% 85%;
+      transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
+      .main-con--grid--sidebar--categories--flex--con--icon-con {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        align-items: center;
+        align-content: center;
+        justify-items: center;
+        justify-content: center; }
+        .main-con--grid--sidebar--categories--flex--con--icon-con--circle {
+          display: grid;
+          align-items: center;
+          align-content: center;
+          justify-items: center;
+          justify-content: center;
+          width: 3rem;
+          height: 3rem;
+          border-radius: 50%;
+          margin-left: -0.5rem;
+          background-color: rgba(255, 255, 255, 0.1); }
+          .main-con--grid--sidebar--categories--flex--con--icon-con--circle--icon {
+            transform: scale(0.8);
+            -webkit-filter: invert(89%) sepia(6%) hue-rotate(185deg); }
+      .main-con--grid--sidebar--categories--flex--con--txt-con {
+        display: grid;
+        align-items: center;
+        align-content: center; }
+        .main-con--grid--sidebar--categories--flex--con--txt-con--txt {
+          margin-left: -0.1rem;
+          font-size: 1.5rem;
+          color: #e4e6eb;
+          font-weight: 500; }
+      .main-con--grid--sidebar--categories--flex--con:hover {
+        cursor: pointer;
+        background-color: rgba(255, 255, 255, 0.1);
+        transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+        -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
