--- a/sass/shop/layout/sidebar__markket/sidebar__marketplace.scss
+++ b/sass/shop/layout/sidebar__markket/sidebar__marketplace.scss
@@ -3,6 +3,8 @@
     width: 100%;
     height: 100%;
     border-top: 1px solid rgba(128, 128, 128, 0.4);
+    border-right: 1px solid rgba(128, 128, 128, 0.4);
+    outline: 1px solid rgba(128,128,128,0.4);
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 17% 83%;
