--- a/sass/main-market.scss
+++ b/sass/main-market.scss
@@ -7,3 +7,4 @@
 @import"./shop/layout/sidebar__markket/sidebar__marketplace.scss";
 @import"./shop/layout/sidebar__markket/filters.scss";
 @import"./shop/layout/sidebar__markket/Categories.scss";
+@import"./shop/layout/product-page__market/product__market.scss";
