--- a/sass/shop/layout/product-page__market/product__market.scss
+++ b/sass/shop/layout/product-page__market/product__market.scss
@@ -1,6 +1,47 @@
-.main-con--grid--product{
+.main-con--grid--product {
     width: 100%;
     height: 100%;
-    background-color: black;
-    border: 2px solid green;
+
+    &--heading-con {
+        width: 100%;
+        height: 12.5%;
+        display: grid;
+        grid-template-rows: 100%;
+        grid-template-columns: 15.6% 66% 18.4%;
+        align-items: center;
+        align-content: center;
+
+        &--heading {
+
+            color: #e4e6eb;
+            font-weight: 700;
+            font-size: 2.0rem;
+            font-family: 'Roboto', sans-serif;
+            margin-left: 3rem;
+        }
+
+        &--location {
+            padding-top: 0.5rem;
+            text-align: center;
+            grid-column: 3 / -1;
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            align-content: center;
+            display: flex;
+
+            &--icon {
+                -webkit-filter: invert(40%) sepia(52%) saturate(200%) saturate(200%) saturate(189%) hue-rotate(189deg) brightness(103%) contrast(102%);
+            }
+
+            &--txt {
+                margin-left: 0.3rem;
+                display: inline-block;
+                color: #2e89ff;
+                font-weight: 400;
+                font-size: 1.5rem;
+                font-family: 'Roboto', sans-serif;
+            }
+        }
+    }
 }
