--- a/css/shop.css
+++ b/css/shop.css
@@ -464,3 +464,43 @@ body {
         font-weight: 400;
         font-size: 1.5rem;
         font-family: 'Roboto', sans-serif; }
+        .main-con--grid--product--heading-con--location--txt:hover {
+          text-decoration: underline;
+          text-decoration-color: #2e89ff; }
+  .main-con--grid--product--product-con {
+    width: 100%;
+    height: 100%;
+    margin-top: 0.3rem;
+    overflow: hidden; }
+    .main-con--grid--product--product-con--grid {
+      width: 94.2%;
+      height: 100%;
+      margin-left: 2.5rem;
+      display: grid;
+      grid-template-columns: 100%;
+      grid-template-rows: repeat(5, 38.3rem);
+      overflow: scroll;
+      /* Chrome, Edge, and Safari */ }
+      .main-con--grid--product--product-con--grid {
+        scrollbar-width: auto;
+        scrollbar-color: transparent transparent; }
+      .main-con--grid--product--product-con--grid::-webkit-scrollbar {
+        width: 0px; }
+      .main-con--grid--product--product-con--grid::-webkit-scrollbar-track {
+        background: transparent; }
+      .main-con--grid--product--product-con--grid::-webkit-scrollbar-thumb {
+        background-color: grey;
+        border-radius: 10px;
+        border: 3px solid transparent;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px; }
+      .main-con--grid--product--product-con--grid--box {
+        border: 2px solid #2e89ff;
+        display: grid;
+        grid-template-rows: 100%;
+        grid-template-columns: repeat(3, 32.3%);
+        grid-gap: 1.4rem; }
+        .main-con--grid--product--product-con--grid--box--sub-box {
+          border: 2px solid fuchsia; }
