--- a/sass/main-market.scss
+++ b/sass/main-market.scss
@@ -8,3 +8,4 @@
 @import"./shop/layout/sidebar__markket/filters.scss";
 @import"./shop/layout/sidebar__markket/Categories.scss";
 @import"./shop/layout/product-page__market/product__market.scss";
+@import"./shop/mobile/product/product__mobile.scss";
